Fix bug 885339 - Support for mac/ubuntu overlay scrollbars. r=Paenglab. Using an axe to get around the CLOSED TREE, sorry.

--- a/calendar/base/themes/common/calendar-management.css
+++ b/calendar/base/themes/common/calendar-management.css
@@ -47,3 +47,7 @@ calendar-list-tree > tree > treecols > treecol[hideheader="true"] {
   max-height: 0px;
   height: 0px;
 }
+
+calendar-list-tree > tree > treecols > treecol[anonid="scrollbar-spacer"]:-moz-system-metric(overlay-scrollbars) {
+  display: none;
+}
