--- a/calendar/base/themes/common/calendar-views.css
+++ b/calendar/base/themes/common/calendar-views.css
@@ -1128,3 +1128,8 @@ tab[calview] > .tab-middle {
     -moz-image-region: rect(0 11px 11px 0);
     display: -moz-box;
 }
+
+.multiday-headerscrollbarspacer:-moz-system-metric(overlay-scrollbars),
+.multiday-labelscrollbarspacer:-moz-system-metric(overlay-scrollbars) {
+    display: none;
+}
